# proof-of-work

./: .editorconfig  .gitlab-ci.yml  .guix-channel  .hypatia-baseline.json  .tool-versions  0-AI-MANIFEST.a2ml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  META.scm  NEUROSYM.scm  PLAYBOOK.scm  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RUST-SPARK-STANCE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  codemeta.json  eclexiaiser.toml  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  (+1 more)
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: abi-verify.yml  cargo-audit.yml  casket-pages.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  container.yml  dependabot-automerge.yml  generator-generic-ossf-slsa3-publish.yml  governance.yml  hypatia-scan.yml  publish.yml  quality.yml  release.yml  rust-ci.yml  rust.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  stress-test.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.a2ml  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machines_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
benches/: proof_of_work_bench.rs
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
docs/governance/: CRG-AUDIT-2026-04-18.adoc
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_verification.rs
levels/: 01_intro.ron
packaging/aur/: .SRCINFO  PKGBUILD
site/: README.md
site/assets/: style.css
site/content/: index.md
site/templates/: default.html
src/: game_systems.rs  lib.rs  main.rs  states.rs
src/abi/: proof-of-work-abi.ipkg
src/abi/ProofOfWork/ABI/: Foreign.idr  Invariants.idr  Types.idr
src/editor/: mod.rs  ui.rs
src/game/: board.rs  mod.rs  pieces.rs  validation.rs
src/levels/: mod.rs  ui.rs
src/network/: client.rs  mod.rs
src/steam/: mod.rs
src/ui/: mod.rs
src/verification/: mod.rs  z3_integration.rs
tests/: aspect_test.rs  e2e_test.rs  property_test.rs
